--- a/mqm-rest-client/pom.xml
+++ b/mqm-rest-client/pom.xml
@@ -11,6 +11,10 @@
 
 	<dependencies>
 		<dependency>
+			<groupId>commons-codec</groupId>
+			<artifactId>commons-codec</artifactId>
+		</dependency>
+		<dependency>
 			<groupId>commons-io</groupId>
 			<artifactId>commons-io</artifactId>
 		</dependency>
