--- a/mqm-rest-client-test/pom.xml
+++ b/mqm-rest-client-test/pom.xml
@@ -130,7 +130,7 @@
 		<profile>
 			<id>sign</id>
 			<properties>
-				<gpg.homedir>/opt/gpg</gpg.homedir>
+				<gpg.homedir>/opt/gpg_import</gpg.homedir>
 			</properties>
 			<build>
 				<plugins>
