--- a/pom.xml
+++ b/pom.xml
@@ -250,7 +250,7 @@
         <profile>
             <id>sign</id>
             <properties>
-                <gpg.homedir>/opt/gpg</gpg.homedir>
+                <gpg.homedir>/opt/gpg_import</gpg.homedir>
             </properties>
             <build>
                 <pluginManagement>
